Improved Swagger documentation. Audit of failed login events. TravelDestinations field in Itinerary struct updated to be an array of pointers instead of a pointer of an array
